fix models & service & repository
