# docs/swagger.yaml
@@ -22,6 +22,24 @@ definitions:
       msg:
         type: string
     type: object
+  models.GetSubsResponse:
+    properties:
+      end_date:
+        example: 07-2025 or 12-9999(infinity)
+        type: string
+      price:
+        example: 299
+        type: integer
+      service_name:
+        example: Spotify
+        type: string
+      start_date:
+        example: 07-2025
+        type: string
+      user_id:
+        example: 123e4567-e89b-12d3-a456-426614174000
+        type: string
+    type: object
   models.GoodResponse:
     properties:
       msg:
@@ -53,6 +71,10 @@ paths:
           description: Bad Request
           schema:
             $ref: '#/definitions/models.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
       summary: Создать подписку
       tags:
       - subscriptions
@@ -71,15 +93,15 @@ paths:
         "200":
           description: OK
           schema:
-            additionalProperties:
-              type: string
-            type: object
+            $ref: '#/definitions/models.GoodResponse'
         "400":
           description: Bad Request
           schema:
-            additionalProperties:
-              type: string
-            type: object
+            $ref: '#/definitions/models.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
       summary: Удалить подписку по user_id
       tags:
       - subscriptions
@@ -93,16 +115,16 @@ paths:
           description: OK
           schema:
             items:
-              additionalProperties:
-                type: string
-              type: object
+              $ref: '#/definitions/models.GetSubsResponse'
             type: array
         "400":
           description: Bad Request
           schema:
-            additionalProperties:
-              type: string
-            type: object
+            $ref: '#/definitions/models.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
       summary: Получить все подписки
       tags:
       - subscriptions
@@ -121,15 +143,15 @@ paths:
         "200":
           description: OK
           schema:
-            additionalProperties:
-              type: string
-            type: object
+            $ref: '#/definitions/models.GetSubsResponse'
         "400":
           description: Bad Request
           schema:
-            additionalProperties:
-              type: string
-            type: object
+            $ref: '#/definitions/models.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
       summary: Получить подписку по user_id
       tags:
       - subscriptions
@@ -151,15 +173,17 @@ paths:
         "200":
           description: OK
           schema:
-            additionalProperties:
-              type: string
-            type: object
+            items:
+              $ref: '#/definitions/models.GetSubsResponse'
+            type: array
         "400":
           description: Bad Request
           schema:
-            additionalProperties:
-              type: string
-            type: object
+            $ref: '#/definitions/models.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
       summary: Обновить подписку
       tags:
       - subscriptions
